crates/hdk/tests/tests/hdk_extern/validate_infallible_invalid_return.stderr
error: `validate` must return `ValidateCallbackResult`
 --> tests/tests/hdk_extern/validate_infallible_invalid_return.rs:4:18
  |
4 | fn validate() -> String {
  |                  ^^^^^^
